--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,10 @@
  - IO to and from portable netcdf / hdf5 file format
+   - write routines for allocation and deallocation of memory
+   - write routines to read and write netcdf and hdf5 files
+   - write routines to inject data
+
+ - write black scholes pricing routines
+
  - Documentation of the interface
  - Creating a proper dependencies to the sleef project
  - Create a batch mechanism to incorporate different architectures
